JPS mappings for incremental compilation refactoring: generic iterables for recursive traversals; more rules
GitOrigin-RevId: fcc2a05261481b96291d0ce7167ccf10850972d9